--- a/retosAtareao/Retos-atareao.ipynb
+++ b/retosAtareao/Retos-atareao.ipynb
@@ -317,9 +317,10 @@
    "metadata": {},
    "source": [
     "https://stackoverflow.com/questions/35851281/python-finding-the-users-downloads-folder\n",
+    "\n",
     "Alguien dio esta posible solución, pero como toca registro, no me atrevo a meterla tal cual:\n",
     "\n",
-    "\"\"\"import os\n",
+    "```import os\n",
     "\n",
     "def get_download_path():\n",
     "    \"\"\"Returns the default downloads path for linux or windows\"\"\"\n",
@@ -331,11 +332,13 @@
     "            location = winreg.QueryValueEx(key, downloads_guid)[0]\n",
     "        return location\n",
     "    else:\n",
-    "        return os.path.join(os.path.expanduser('~'), 'downloads')\"\"\"\n",
+    "        return os.path.join(os.path.expanduser('~'), 'downloads')\n",
+    "```\n",
     "\n",
     "Este me inspira más confianza, aunque de novatos mis cojones:\n",
     "\n",
-    "\"\"\"import os\n",
+    "```\n",
+    "import os\n",
     "\n",
     "if os.name == 'nt':\n",
     "    import ctypes\n",
@@ -381,7 +384,8 @@
     "        home = os.path.expanduser(\"~\")\n",
     "        return os.path.join(home, \"Downloads\")\n",
     "        \n",
-    "print(get_download_folder())\"\"\"\n",
+    "print(get_download_folder())\n",
+    "```\n",
     "        "
    ]
   },
@@ -435,16 +439,15 @@
     }
    ],
    "source": [
+    "import pathlib\n",
+    "\n",
     "def get_download_folder():\n",
     "        home = os.path.expanduser(\"~\")\n",
     "        return os.path.join(home, \"Downloads\")\n",
     "    \n",
     "print(get_download_folder())        \n",
     "\n",
-    "import pathlib\n",
-    "\n",
     "ejemplo_dir = get_download_folder()\n",
-    "\n",
     "directorio = pathlib.Path(ejemplo_dir)\n",
     "ficheros = [fichero.name for fichero in directorio.iterdir() if fichero.is_file()]\n",
     "for i in ficheros:\n",
@@ -461,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "id": "aa5f84b2",
    "metadata": {},
    "outputs": [
@@ -485,11 +488,219 @@
     "    \n",
     "print(get_download_folder()) \n",
     "\n",
-    "ejemplo_dir = '/Users/noave/Downloads'\n",
+    "ejemplo_dir = get_download_folder()\n",
     "with os.scandir(ejemplo_dir) as ficheros:\n",
     "    ficheros = [fichero.name for fichero in ficheros if fichero.is_file()]\n",
     "for i in ficheros:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2d9de8e",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Reto 2\n",
+    "\n",
+    "> En este caso, y partiendo de la solución anterior, ahora hay que trabajar con archivos. El objetivo es que listes todos los archivos JPEG que se encuentran en el directorio de descargas del usuario.\n",
+    "\n",
+    "> Tienes que tener en cuenta, que imágenes JPEG, son los .jpg o .jpeg o incluso JPEG por citarte algunas. Pero además en el listado se cumplirán las siguientes condiciones,\n",
+    "> - Si en el nombre del archivo aparece un número, el nombre del achivo apararecerá en mayúsculas, mientras que si no tiene ningún número aparecerá en minúsculas.\n",
+    "> - Además en ese listado, los que sean pares, tendrán una flecha delante, del tipo =>.\n",
+    "\n",
+    "> Como ves se trata de un reto sencillo, y que nos permitirá profundizar en bucles, módulos y otros temas similares.\n",
+    "\n",
+    "Este reto tiene una parte que ya está solucionada más arriba, en mis notas del reto 1. Es la parte de los archivos en JPG. Para extender las variaciones dentro de la extensión (jpeg, JPEG, jpg, etc.), tal vez pueda aplicar expresiones regulares. No sé si algo como jp*g funcionará, imagino que tendría que importar el módulo y ver cuál es la forma correcta. Y, de paso, tal vez tenga una forma de evitar el case sensitive sin recurrir a .lower().\n",
+    "\n",
+    "También habrá que hacer un bucle for para cada carácter dentro de cada archivo, un for i in str, para determinar si hay números. Aquí imagino que sí necesitaré expresiones regulares, ya que al ser str no puedo preguntar si hay int. Necesitaría filtrar con [0-9]. Si la respuesta es True: upper(str). \n",
+    "\n",
+    "Por último, hay varias formas de hacer algo con los elementos pares o impares. Se puede hacer con bucles while tanto con for. Por lo general, se determinan los pares cuando su index % 2 = 0. O bien podemos establecer un range(start, end, 2), pero no me acuerdo de si puedo usar el valor len(archivos) para determinar el end del range. \n",
+    "\n",
+    "Empecemos.\n",
+    "\n",
+    "Antes de andar jugueteando con mis directorios, voy a simular con una lista.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(6, 11), match='.JPEG'>\n",
+      "prueba.JPEG \n",
+      "---------------\n",
+      "<re.Match object; span=(8, 12), match='.jpg'>\n",
+      "imagen01.jpg\n",
+      "<re.Match object; span=(12, 16), match='.JPG'>\n",
+      "oso_trospido.JPG\n",
+      "None\n",
+      "<re.Match object; span=(11, 16), match='.JPEG'>\n",
+      "Ashjkdaslkl.JPEG\n",
+      "<re.Match object; span=(10, 15), match='.jpeg'>\n",
+      "AKAKAKAKA9.jpeg\n",
+      "<re.Match object; span=(11, 15), match='.jpg'>\n",
+      "final_image.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Encontrar archivos cuya extensión coincida con .jpg y variantes:\n",
+    "import re\n",
+    "archivos = ['imagen01.jpg', 'oso_trospido.JPG', \"Karaoke.mp3\", 'Ashjkdaslkl.JPEG', 'AKAKAKAKA9.jpeg', 'final_image.jpg']\n",
+    "patron = re.compile(r\"\\.jp[e]?g\", re.IGNORECASE)\n",
+    "\n",
+    "prueba = \"prueba.JPEG\"\n",
+    "print(patron.search(prueba)) # No sé por qué, pero .match() me da siempre None.\n",
+    "print(prueba, \"\\n---------------\")\n",
+    "\n",
+    "for i in archivos:\n",
+    "    print(patron.search(i))\n",
+    "    if patron.search(i):\n",
+    "        print(i)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "f74b6898",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(6, 7), match='5'>\n",
+      "imagen5.jpg \n",
+      "---------------\n",
+      "IMAGEN01.JPG\n",
+      "oso_trospido.JPG\n",
+      "Ashjkdaslkl.JPEG\n",
+      "AKAKAKAKA9.JPEG\n",
+      "final_image.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Determinar si los archivos llevan números.\n",
+    "# Si es True, ponerlo todo en mayúsculas.\n",
+    "import re\n",
+    "archivos = ['imagen01.jpg', 'oso_trospido.JPG',\n",
+    "            'Ashjkdaslkl.JPEG', 'AKAKAKAKA9.jpeg', 'final_image.jpg']\n",
+    "patron = re.compile(r\"[0-9]\", re.IGNORECASE)\n",
+    "\n",
+    "prueba = \"imagen5.jpg\"\n",
+    "print(patron.search(prueba))\n",
+    "print(prueba, \"\\n---------------\")\n",
+    "\n",
+    "for i in archivos:\n",
+    "#    print(patron.search(i))\n",
+    "    if patron.search(i):\n",
+    "        print(i.upper())\n",
+    "    else:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "649a101d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "imagen01.jpg\n",
+      "=>  oso_trospido.JPG\n",
+      "Ashjkdaslkl.JPEG\n",
+      "=>  AKAKAKAKA9.jpeg\n",
+      "final_image.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Si es par, añadir una flecha.\n",
+    "\n",
+    "archivos = ['imagen01.jpg', 'oso_trospido.JPG',\n",
+    "            'Ashjkdaslkl.JPEG', 'AKAKAKAKA9.jpeg', 'final_image.jpg']\n",
+    "\n",
+    "pos=0\n",
+    "for i in archivos:\n",
+    "    pos+=1\n",
+    "    if pos%2==0:\n",
+    "        print(\"=> \", i)\n",
+    "    else:\n",
+    "        print(i)        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5995502",
+   "metadata": {},
+   "source": [
+    "Ya tendríamos prácticamente todo por separado. Vamos a intentar ponerlo todo junto. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "a33ae761",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\noave\\Downloads\n",
+      "2021-06-10 AT 20.24.57.JPEG\n",
+      "=> 808187.JPG\n",
+      "images.jpg\n",
+      "=> oso-trospido.jpg\n",
+      "PEXELS-C-TECHNICAL-6636897.JPG\n",
+      "=> punch-a-nazi.jpg\n",
+      "sogadesedaymagia_tradingcard-wombo.jpg\n",
+      "=> takashi-akira.jpg\n",
+      "WHATSAPP IMAGE 2021-04-30 AT 21.14.49.JPEG\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import re\n",
+    "\n",
+    "def get_download_folder():\n",
+    "    home = os.path.expanduser(\"~\")\n",
+    "    return os.path.join(home, \"Downloads\")\n",
+    "\n",
+    "print(get_download_folder())\n",
+    "\n",
+    "patronJPG = re.compile(r\"\\.jp[e]?g\", re.IGNORECASE)\n",
+    "patronNum = re.compile(r\"[0-9]\", re.IGNORECASE)\n",
+    "descargasDir = get_download_folder()\n",
+    "\n",
+    "contenido = os.listdir(descargasDir)\n",
+    "imagenes = []\n",
+    "for fichero in contenido:\n",
+    "    if os.path.isfile(os.path.join(descargasDir, fichero)) and patronJPG.search(fichero):\n",
+    "        imagenes.append(fichero)\n",
+    "\n",
+    "pos = 0\n",
+    "\n",
+    "for i in imagenes:\n",
+    "    pos += 1\n",
+    "    if pos % 2 == 0:\n",
+    "        i = \"=> \" + i\n",
+    "\n",
+    "    if patronNum.search(i):\n",
+    "        print(i.upper())\n",
+    "    else:\n",
+    "        print(i.lower())"
    ]
   }
  ],
