--- a/retosAtareao/Retos-atareao.ipynb
+++ b/retosAtareao/Retos-atareao.ipynb
@@ -284,35 +284,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1cc3f03",
-   "metadata": {},
-   "source": [
-    "Se me ha ocurrido que a lo mejor puedo aprovechar la información del archivo desktop.ini. A lo mejor tiene info común independientemente de la ruta y el nombre de usuario. Esto es lo que ponía:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "1ed46093",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_3664/3758580414.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\noave\\AppData\\Local\\Temp/ipykernel_3664/3758580414.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    [.ShellClassInfo]\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "[.ShellClassInfo]\n",
-    "LocalizedResourceName=@%SystemRoot%\\system32\\shell32.dll,-21798\n",
-    "IconResource=%SystemRoot%\\system32\\imageres.dll,-184"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "24ffe8a7",
    "metadata": {},
    "source": [
@@ -335,7 +306,7 @@
     "        return os.path.join(os.path.expanduser('~'), 'downloads')\n",
     "```\n",
     "\n",
-    "Este me inspira más confianza, aunque de novatos mis cojones:\n",
+    "Este me inspira más confianza, aunque de novato no tiene nada:\n",
     "\n",
     "```\n",
     "import os\n",
@@ -644,7 +615,7 @@
    "id": "e5995502",
    "metadata": {},
    "source": [
-    "Ya tendríamos prácticamente todo por separado. Vamos a intentar ponerlo todo junto. "
+    "Ya tendríamos prácticamente todo por separado. Vamos a ponerlo todo junto. "
    ]
   },
   {
@@ -701,6 +672,14 @@
     "        print(i.upper())\n",
     "    else:\n",
     "        print(i.lower())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b492251b",
+   "metadata": {},
+   "source": [
+    "¡Reto número 2 conseguido!"
    ]
   }
  ],
