220307 Actualizado Jupyter PEP8

--- a/retosAtareao/Retos-atareao.ipynb
+++ b/retosAtareao/Retos-atareao.ipynb
@@ -681,6 +681,36 @@
    "source": [
     "¡Reto número 2 conseguido!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a37e6b79",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "`[Actualización 220307]`\n",
+    "\n",
+    "\n",
+    "Al hacer Pull Request, Github me da el siguiente mensaje a través de [pep8speaks](https://github.com/pep8speaks):\n",
+    "\n",
+    "> Hello @NoaVelasco! Thanks for opening this PR. We checked the lines you've touched for PEP 8 issues, and found:\n",
+    "\n",
+    "    - In the file reto-01/NoaVelasco/reto01.py:\n",
+    "\n",
+    "    Line 3:1: E302 expected 2 blank lines, found 1\n",
+    "    Line 4:9: E117 over-indented\n",
+    "    Line 6:1: W293 blank line contains whitespace\n",
+    "    Line 7:1: E305 expected 2 blank lines after class or function definition, found 1\n",
+    "    Line 7:29: W291 trailing whitespace\n",
+    "    Line 13:13: W292 no newline at end of file\n",
+    "\n",
+    "    - In the file reto-02/NoaVelasco/reto02.py:\n",
+    "\n",
+    "    Line 19:80: E501 line too long (89 > 79 characters)\n",
+    "\n",
+    "Así que he hecho algunos cambios para dejar el código lo mejor posible."
+   ]
   }
  ],
  "metadata": {
@@ -699,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
