220313 nuevos enunciados Sololearn

--- a/ejerciciosSololearn/Sololearn_codigos.ipynb
+++ b/ejerciciosSololearn/Sololearn_codigos.ipynb
@@ -330,6 +330,101 @@
    "source": [
     " "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selector de fecha\n",
+    "\n",
+    "> Estás haciendo un selector de fecha para una página web y necesitas extraer todos los años en un periodo determinado. El rango te puede ayudar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### FizzBuzz\n",
+    "\n",
+    "FizzBuzz es una tarea de programación muy conocida, preguntada durante las entrevistas de trabajo.\n",
+    "\n",
+    "El código dado resuelve el problema de FizzBuzz y utiliza las palabras “Solo” y “Learn” en lugar de “Fizz” y “Buzz”.\n",
+    "Toma una entrada n y saca los números de 1 a n.\n",
+    "Por cada múltiplo de 3, imprime “Solo” en lugar del número.\n",
+    "Por cada múltiplo de 5, imprime “Learn” en lugar del número.\n",
+    "Para los números que son múltiplos de 3 y 5, saca “SoloLearn”.\n",
+    "\n",
+    "Es necesario cambiar el código para saltar los números pares, para que la lógica sólo se aplique a los números impares en el rango.\n",
+    "\n",
+    "// Recuerde, la declaración **continue** puede ser usada para saltar una iteración de bucle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "for x in range(1, n):\n",
+    "    if x % 2 == 0:\n",
+    "        continue\n",
+    "    elif x % 3 == 0 and x % 5 == 0: \n",
+    "        print(\"Sololearn\")\n",
+    "    elif x % 3 == 0: \n",
+    "        print(\"Solo\")\n",
+    "    elif x % 5 == 0:\n",
+    "        print(\"Learn\")\n",
+    "    else:\n",
+    "        print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Celsius a Fahrenheit\n",
+    "\n",
+    "> Estás haciendo un convertidor de Celsius a Fahrenheit. Escribe una función para tomar el valor de Celsius como argumento y devolver el valor de Fahrenheit correspondiente. \n",
+    "\n",
+    "Ejemplo de entrada: 36\n",
+    "\n",
+    "Ejemplo de salida: 96.8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nuevas líneas\n",
+    "\n",
+    "> Completa el programa para crear un archivo en el que escriba los nombres de la lista, cada uno en una línea nueva y los envíe por separado. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Títulos de libros\n",
+    "\n",
+    "Necesitas hacer un programa de categorización especial, que asigne a cada libro un código especial basado en su título: \n",
+    "El código es igual a la primera letra del libro, seguido del número de caracteres del título. \n",
+    "Por ejemplo, para el libro \"Harry Potter\", el código sería: H12, ya que contiene 12 caracteres (incluyendo el espacio) \n",
+    "  \n",
+    "Se te da un archivo books.txt , que incluye el título del libro, cada uno escrito en una línea separada. \n",
+    "Tienes que leer el título uno por uno y sacar el código de cada libro en una línea separada. \n",
+    "  \n",
+    "Por ejemplo, si el archivo books.txt contiene: \n",
+    "Some book \n",
+    "Another book \n",
+    "  \n",
+    "Tu programa debería generar: \n",
+    "S9 \n",
+    "A12\n",
+    "\n",
+    "// Llama al método `readlines()`, que devuelve una lista que contiene las líneas del archivo. Además, recuerda que todas las líneas, excepto la última, contienen un `\\n` al final, que no debe ser incluido en el recuento de caracteres."
+   ]
   }
  ],
  "metadata": {
