--- a/ejerciciosSololearn/Sololearn_codigos_01.ipynb
+++ b/ejerciciosSololearn/Sololearn_codigos_01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejercicios Sololearn\n",
+    "# Ejercicios Sololearn 01\n",
     "\n",
     "Voy a ir añadiendo aquí los ejercicios, retos y ocurrencias a partir de lo que veo por la app de Sololearn."
    ]
@@ -315,6 +315,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La suma de  [5, 5, 5, 5, 5] es \n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Con lista \n",
+    "x = []\n",
+    "nums = input()\n",
+    "\n",
+    "for i in nums:\n",
+    "  x.append(int(i))\n",
+    "\n",
+    "suma = sum(x)\n",
+    "\n",
+    "print(\"La suma de \", x, \"es \")\n",
+    "print(suma)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La suma de \n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "es  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sin lista \n",
+    "y = 0\n",
+    "nums = input()\n",
+    "\n",
+    "print(\"La suma de \")\n",
+    "for i in nums:\n",
+    "    print(i)\n",
+    "    y += int(i)\n",
+    "\n",
+    "print(\"es \", y)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -424,6 +484,115 @@
     "A12\n",
     "\n",
     "// Llama al método `readlines()`, que devuelve una lista que contiene las líneas del archivo. Además, recuerda que todas las líneas, excepto la última, contienen un `\\n` al final, que no debe ser incluido en el recuento de caracteres."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cheer creator\n",
+    "\n",
+    "You are cheering on your favorite team. After each play, if your team got over 10 yards further down the field, you stand up and give your friend a high five. If they don't move forward by at least a yard you stay quiet and say 'shh', and if they move forward 10 yards or less, you say 'Ra!' for every yard that they moved forward in that play. \n",
+    " \n",
+    "Task  \n",
+    "Given the number of yards that your team moved forward, output either 'High Five' (for over 10), 'shh' (for <1), or a string that has a 'Ra!' for every yard that they gained. \n",
+    " \n",
+    "Input Format  \n",
+    "An integer value that represents the number of yards gained or lost by your team. \n",
+    " \n",
+    "Output Format  \n",
+    "A string of the appropriate cheer.  \n",
+    " \n",
+    "Sample Input  \n",
+    "3 \n",
+    " \n",
+    "Sample Output \n",
+    "Ra!Ra!Ra!\n",
+    "\n",
+    "// Este ejercicio está trucadísimo. No sé qué narices quieren, pero he probado varios códigos que funcionaban a la perfección y no los quiere. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "move = int(input())\n",
+    "\n",
+    "if move < 1:\n",
+    "    print(\"shh\")\n",
+    "else:\n",
+    "  if move <= 10:\n",
+    "    print(\"Ra! \"*move)\n",
+    "  else:\n",
+    "    if move > 10:\n",
+    "      print(\"High Five\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Skee ball\n",
+    "You are playing a game at your local arcade, and you receive 1 ticket from the machine for every 12 points that you score. You want to purchase a squirt gun with your tickets. Given your score, and the price of the squirt gun (in tickets) are you able to buy it? \n",
+    " \n",
+    "Task  \n",
+    "Evaluate whether or not you have scored high enough to earn enough tickets to purchase the squirt gun at the arcade. \n",
+    " \n",
+    "Input Format  \n",
+    "The first input is an integer value that represents the points that you scored playing, and the second input is an integer value that represents the cost of the squirt gun (in tickets). \n",
+    " \n",
+    "Output Format  \n",
+    "A string that say 'Buy it!' if you will have enough tickets, or a string that says 'Try again' if you will not. \n",
+    " \n",
+    "Sample Input  \n",
+    "500 \n",
+    "40 \n",
+    " \n",
+    "Sample Output \n",
+    "Buy it!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tickets = int(input())\n",
+    "pistola = int(input())\n",
+    "\n",
+    "if tickets/12 >= pistola:\n",
+    "    print(\"Buy it!\")\n",
+    "else:\n",
+    "    print(\"Try again\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Paint costs\n",
+    "You are getting ready to paint a piece of art. The canvas and brushes that you want to use will cost 40.00. Each color of paint that you buy is an additional 5.00. Determine how much money you will need based on the number of colors that you want to buy if tax at this store is 10%. \n",
+    " \n",
+    "Task  \n",
+    "Given the total number of colors of paint that you need, calculate and output the total cost of your project rounded up to the nearest whole number. \n",
+    " \n",
+    "Input Format  \n",
+    "An integer that represents the number of colors that you want to purchase for your project. \n",
+    " \n",
+    "Output Format  \n",
+    "A number that represents the cost of your purchase rounded up to the nearest whole number. \n",
+    " \n",
+    "Sample Input  \n",
+    "10 \n",
+    " \n",
+    "Sample Output  \n",
+    "99\n",
+    "\n",
+    "> Explanation  \n",
+    "> You need 50.00 to buy 10 colors of paint + 40.00 for the canvas and brushes + 9.00 for the tax."
    ]
   }
  ],
