--- a/retosAtareao/Retos-atareao.ipynb
+++ b/retosAtareao/Retos-atareao.ipynb
@@ -711,6 +711,219 @@
     "\n",
     "Así que he hecho algunos cambios para dejar el código lo mejor posible."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3f1465e",
+   "metadata": {},
+   "source": [
+    "## Otras opciones\n",
+    "Atareao tiene cosillas interesantes en su código. \n",
+    "Lo primero es la librería mimetypes, con la que podemos comparar archivos y ver si son de formato JPG en sus variantes. Él tiene esta parte de código (aquí lo he adaptado un poco):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f4817855",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oso.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mimetypes\n",
+    "\n",
+    "mimetypes.init()\n",
+    "\n",
+    "listadearchivos=[\"oso.jpg\", \"documento.doc\"]\n",
+    "\n",
+    "for afile in listadearchivos:\n",
+    "    \n",
+    "    if mimetypes.guess_type(afile)[0] == \"image/jpeg\":\n",
+    "        \n",
+    "        print(afile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb5f3cbe",
+   "metadata": {},
+   "source": [
+    "# Reto 03\n",
+    "\n",
+    "Ahora que mas o menos tenemos controlado la opción de listar y gestionar todos los archivos que se encuentran en nuestro directorio de Descargas, ha llegado el momento de rizar el rizo. En lugar de utilizar el directorio de Descargas, vas a permitir que el usuario de tu aplicación pueda definir el directorio quiera.\n",
+    "\n",
+    "Para hacer esto necesitas un archivo de configuración donde guardar la información. En este caso, y como primer paso, solo vas a guardar un directorio. Para hacer esto, en este tercer reto vas a utilizar el formato TOML [Tom’s Obvious Minimal Language](https://github.com/toml-lang/toml).\n",
+    "\n",
+    "Así, el archivo de configuración tendrá el siguiente contenido\n",
+    "\n",
+    "`directorio = \"/home/lorenzo/Descargas\"`\n",
+    "\n",
+    "Así, el objetivo de este reto es crear el archivo de configuración en el caso de que no exista el mismo, y asignar como directorio el directorio por defecto el directorio de descargas, del primero de los retos.\n",
+    "\n",
+    "El archivo de configuración se tiene que encontrar en `/home/lorenzo/.config/diogenes/`, y su nombre será `diogenes.conf`.\n",
+    "\n",
+    "En el caso de que exista el archivo de configuración tiene que leer el contenido del mismo y listar los imágenes jpeg que se encuentran en él. En el caso de que no exista el directorio de las imágenes lo creará. Si no encuentra ninguna imagen, como es lógico no las listará claro."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "994c46b7",
+   "metadata": {},
+   "source": [
+    "Si no está creado, crear el archivo \n",
+    "`/home/noave/.config/diogenes/diogenes.conf`\n",
+    "\n",
+    "con el contenido\n",
+    "```\n",
+    "\\```\n",
+    "directorio = \"/home/noave/Descargas\"\n",
+    "\\```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d19ae0c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os import path\n",
+    "\n",
+    "## Cuidado, porque al importar os me da error\n",
+    "## y se sobrepone al OPEN por defecto.\n",
+    "\n",
+    "rutaDiogenes = path.join(path.expanduser(\n",
+    "    \"~\"), '.config\\diogenes\\diogenes.conf')\n",
+    "\n",
+    "if path.isfile(rutaDiogenes):\n",
+    "    f = open(rutaDiogenes, \"r\")\n",
+    "    print(f.read())\n",
+    "else:\n",
+    "    f = open(rutaDiogenes, \"w\")    \n",
+    "    f.write('directorio = \"/home/noave/Descargas\"')\n",
+    "    f.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ca41bdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## En Jupyter ya aparece cargado OS, pero así\n",
+    "## no funcionará nunca porque dará siempre error:\n",
+    "import os \n",
+    "\n",
+    "ruta2 = \"/TRABAJO/_Programación/\"\n",
+    "\n",
+    "print(listdir(ruta2))\n",
+    "f = open(\"/TRABAJO/_Programación/prueba2.txt\", \"w\")\n",
+    "\n",
+    "f.write('prueba')\n",
+    "f.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "781b5999",
+   "metadata": {},
+   "source": [
+    "Si me aseguro de que no se carga la librería os, el código ya funciona y me abre y lee el archivo de configuración. Si no existe, me lo crea.\n",
+    "\n",
+    "La siguiente parte del reto consiste en que al leer la información del archivo de configuración sea capaz de tomar de ahí la dirección de descargas y listará todas las imágenes JPG que estén en dicho directorio. \n",
+    "\n",
+    "Para ello voy a usar el módulo mimetypes y tendré que hacer un listdir. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 're.Match'>\n",
+      "<re.Match object; span=(13, 36), match='\"/home/noave/Descargas\"'>\n",
+      "/home/noave/Descargas\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] El sistema no puede encontrar la ruta especificada: '/home/noave/Descargas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\noave\\Python\\RetosEjerExtr\\retosAtareao\\Retos-atareao.ipynb Cell 38'\u001b[0m in \u001b[0;36m<cell line: 15>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/noave/Python/RetosEjerExtr/retosAtareao/Retos-atareao.ipynb#ch0000041?line=11'>12</a>\u001b[0m \u001b[39mprint\u001b[39m(dirJPG)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/noave/Python/RetosEjerExtr/retosAtareao/Retos-atareao.ipynb#ch0000041?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(reemplazo2)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/noave/Python/RetosEjerExtr/retosAtareao/Retos-atareao.ipynb#ch0000041?line=14'>15</a>\u001b[0m dirDesc\u001b[39m=\u001b[39mlistdir(reemplazo2)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/noave/Python/RetosEjerExtr/retosAtareao/Retos-atareao.ipynb#ch0000041?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(dirDesc)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] El sistema no puede encontrar la ruta especificada: '/home/noave/Descargas'"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "patronDir = re.compile(r'\\\"(\\S+)\\\"')\n",
+    "paraBuscar=('''directorio = \"/home/noave/Descargas\"''')\n",
+    "\n",
+    "reemplazo1 = re.sub(r\"\"\"directorio\"\"\", \"\", paraBuscar)\n",
+    "reemplazo2 = re.sub(r\"\"\"[ =\"]\"\"\", \"\", reemplazo1)\n",
+    "\n",
+    "dirJPG=patronDir.search(paraBuscar)\n",
+    "\n",
+    "print(type(dirJPG))\n",
+    "print(dirJPG)\n",
+    "\n",
+    "print(reemplazo2)\n",
+    "dirDesc=listdir(reemplazo2)\n",
+    "print(dirDesc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "bf0cf3ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['BBDD', 'Captura de pantalla 2022-02-17 130152.png', 'Certificado-Python-Codeliber.jpeg', 'Power_Shell', 'Python.lnk', '_Recursos']\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\noave\\Python\\RetosEjerExtr\\retosAtareao\\Retos-atareao.ipynb Cell 39'\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/noave/Python/RetosEjerExtr/retosAtareao/Retos-atareao.ipynb#ch0000042?line=0'>1</a>\u001b[0m ruta2 \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/TRABAJO/_Programación/\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/noave/Python/RetosEjerExtr/retosAtareao/Retos-atareao.ipynb#ch0000042?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(listdir(ruta2))\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/noave/Python/RetosEjerExtr/retosAtareao/Retos-atareao.ipynb#ch0000042?line=4'>5</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m/TRABAJO/_Programación/prueba2.txt\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/noave/Python/RetosEjerExtr/retosAtareao/Retos-atareao.ipynb#ch0000042?line=6'>7</a>\u001b[0m     f\u001b[39m.\u001b[39mwrite(\u001b[39m'\u001b[39m\u001b[39mprueba\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/noave/Python/RetosEjerExtr/retosAtareao/Retos-atareao.ipynb#ch0000042?line=7'>8</a>\u001b[0m     f\u001b[39m.\u001b[39mclose()\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object cannot be interpreted as an integer"
+     ]
+    }
+   ],
+   "source": [
+    "ruta2 = \"/TRABAJO/_Programación/\"\n",
+    "\n",
+    "print(listdir(ruta2))\n",
+    "\n",
+    "with open(\"/TRABAJO/_Programación/prueba2.txt\", \"w\") as f:\n",
+    "\n",
+    "    f.write('prueba')\n",
+    "    f.close()\n"
+   ]
   }
  ],
  "metadata": {
