--- a/retosAtareao/Retos-atareao.ipynb
+++ b/retosAtareao/Retos-atareao.ipynb
@@ -924,6 +924,129 @@
     "    f.write('prueba')\n",
     "    f.close()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c34710ce",
+   "metadata": {},
+   "source": [
+    "Reto 3; falla si el config tiene más líneas "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fffb8368",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python 3.10.2 UTF-8\n",
+    "# Copyright (c) 2022, Noa Velasco\n",
+    "\n",
+    "# Para el proyecto \"reto-python\"\n",
+    "# de Lorenzo Carbonell <a.k.a. atareao>\n",
+    "\n",
+    "import mimetypes\n",
+    "from os import listdir, path\n",
+    "import re\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "\n",
+    "    rutaDiogenes = path.join(path.expanduser(\n",
+    "        \"~\"), '.config\\diogenes\\diogenes.conf')\n",
+    "\n",
+    "    if path.isfile(rutaDiogenes):\n",
+    "        with open(rutaDiogenes, \"r\") as f:\n",
+    "            print(f.read())\n",
+    "\n",
+    "    else:\n",
+    "        with open(rutaDiogenes, \"w\") as f:\n",
+    "            f.write('directorio = \"/Users/noave/Downloads\"')\n",
+    "\n",
+    "    with open(rutaDiogenes, \"r\") as f:\n",
+    "        dwnldDir = f.readline()\n",
+    "\n",
+    "    reemplazo1 = re.sub(r\"\"\"[ =\"]\"\"\", \"\", dwnldDir)\n",
+    "    reemplazo2 = re.sub(r\"\"\"directorio\"\"\", \"\", reemplazo1)\n",
+    "\n",
+    "    listArchivos = listdir(reemplazo2)\n",
+    "    for fichero in listArchivos:\n",
+    "        if mimetypes.guess_type(fichero)[0] == \"image/jpeg\":\n",
+    "            print(fichero)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f26658aa",
+   "metadata": {},
+   "source": [
+    "### Reto 3 guarreado\n",
+    "He visto que otros participantes sí han sabido implementar lo del TOML, pero de verdad que yo ya tengo bastante con que funcione regulinchi. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2839ace4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python 3.10.2 UTF-8\n",
+    "# Copyright (c) 2022, Noa Velasco\n",
+    "\n",
+    "# Para el proyecto \"reto-python\" de Lorenzo Carbonell <a.k.a. atareao>\n",
+    "\n",
+    "import mimetypes  # Para los JPG\n",
+    "from os import listdir, path  # Para manejar rutas\n",
+    "import re  # Para buscar o reemplazar\n",
+    "\n",
+    "# No tengo la menor idea de qué es lo de TOML y no sé\n",
+    "# si hay que implementar algo o cómo hacerlo.\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "\n",
+    "    rutaDiogenes = path.join(path.expanduser(\n",
+    "        \"~\"), '.config\\diogenes\\diogenes.conf')\n",
+    "\n",
+    "    # ¿Existe el archivo config? Si no, se crea:\n",
+    "\n",
+    "    if path.isfile(rutaDiogenes) == False:\n",
+    "        with open(rutaDiogenes, \"w\") as f:\n",
+    "            f.write('directorio = \"/Users/noave/Downloads\"')\n",
+    "\n",
+    "    # Se lee el archivo:\n",
+    "\n",
+    "    with open(rutaDiogenes, \"r\") as f:\n",
+    "        dwnldDir = f.readline()\n",
+    "\n",
+    "    # No he sido capaz de obtener el resultado de un re.compile/re.search\n",
+    "    # como string para usarlo como directorio. He tenido que hacer reemplazos,\n",
+    "    # lo que es poco eficiente y elegante, pero aún no sé manejar el módulo re.\n",
+    "\n",
+    "    reemplazo1 = re.sub(r\"\"\"[ =\"]\"\"\", \"\", dwnldDir)\n",
+    "    reemplazo2 = re.sub(r\"\"\"\\n\"\"\", \"\", reemplazo1)\n",
+    "    reemplazo3 = re.sub(r\"\"\"directorio\"\"\", \"\", reemplazo2)\n",
+    "\n",
+    "    print(\n",
+    "        f\"Imágenes JPG en el directorio '{reemplazo3}': \\n-----------------------------\")\n",
+    "\n",
+    "    # Si los archivos del directorio son JPG, mostrarlos uno a uno:\n",
+    "\n",
+    "    listArchivos = listdir(reemplazo3)\n",
+    "    for fichero in listArchivos:\n",
+    "        if mimetypes.guess_type(fichero)[0] == \"image/jpeg\":\n",
+    "            print(fichero)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
