--- a/retosAtareao/Retos-atareao.ipynb
+++ b/retosAtareao/Retos-atareao.ipynb
@@ -496,6 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "497099b2",
    "metadata": {},
    "outputs": [
     {
@@ -847,6 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
+   "id": "f77b47f4",
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +876,7 @@
     "import re\n",
     "\n",
     "patronDir = re.compile(r'\\\"(\\S+)\\\"')\n",
-    "paraBuscar=('''directorio = \"/home/noave/Descargas\"''')\n",
+    "paraBuscar=('''directorio = \"/Users/noave/Downloads\"''')\n",
     "\n",
     "reemplazo1 = re.sub(r\"\"\"directorio\"\"\", \"\", paraBuscar)\n",
     "reemplazo2 = re.sub(r\"\"\"[ =\"]\"\"\", \"\", reemplazo1)\n",
@@ -978,6 +980,29 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6c651d8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\noave\\.config\\diogenes\\diogenes.conf\n"
+     ]
+    }
+   ],
+   "source": [
+    "from os import path\n",
+    "\n",
+    "rutaDiogenes = path.join(path.expanduser(\n",
+    "    \"~\"), '.config\\\\diogenes\\\\diogenes.conf')\n",
+    "\n",
+    "print(rutaDiogenes)\n"
    ]
   },
   {
